# RuboVision-Engine

./: .gitignore  Cargo.toml  README.md  README_odd.md  TaskTODO.md  future.md
assets/md/: README2.md  Recommed.md
assets/md/form_ai_advise/: from_gpt.md
config/: app.yaml  bindings.toml  device.toml  func_param.toml  param.toml  web.yaml
logs/: rubovision.log.2026-04-08
src/: embed.rs  lib.rs  main.rs
src/config/: app.rs  binding.rs  config_cli.rs  device.rs  device_config.rs  func.rs  mod.rs  settings.rs  web.rs
src/device/: camera.rs  color_detect.rs  config.rs  mod.rs  register.rs  traits.rs  usual.rs
src/device/color_detect/: color_detect_utils.rs  color_detect_work.rs  mod.rs  test.rs
src/device/gpio/: gpio_work.rs  mod.rs
src/device/qr_detect/: mod.rs  test.rs
src/func/: mod.rs  register.rs  tarits.rs  usual.rs
src/init/: logger.rs  mod.rs  register.rs  task_dispatch.rs  task_exec.rs  task_listen.rs
src/source/: mod.rs  source_loop.rs  source_timer.rs  source_uart.rs  source_web.rs  traits.rs
src/utils/: cv_util.rs  device_config_util.rs  mod.rs  web_tools.rs
src/web/: error.rs  handler.rs  main.rs  mod.rs  model.rs  router.rs  state.rs
static/: index.html
static/project/: banner.txt
