[package]
name = "new_car"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.6"
config = "0.15.18"
rust-embed = "8.7.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.11"
tracing = { version = "0.1.44", features = ["attributes"] }
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
base64 = "0.22.1"
log = "0.4.29"
